k8s/loggable-server-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: loggable-server
  labels:
    app: loggable-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: loggable-server
  template:
    metadata:
      labels:
        app: loggable-server
    spec:
      containers:
      - name: loggable-server
        image: sneeze-log-server_web:latest
        imagePullPolicy: Never
        command: ["npm", "run", "server:prod"]
        ports:
          - name: http
            containerPort: 3000
        volumeMounts:
        - mountPath: /usr/app/logs
          name: logs
      imagePullSecrets:
        - name: regcred
      volumes:
        - name: logs
          persistentVolumeClaim:
            claimName: pg-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: loggable-server
spec:
  ports:
    - name: http
      port: 3000
      targetPort: 3000
  selector:
    app: loggable-server
